sửa lỗi, đảm bảo chương trình chạy được